--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch":"jest --watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ricardo Collado Rothschild",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
@@ -17,7 +18,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.11.10",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2"
   }
 }
