--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "onlinestore_ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:watch":"jest --watch"
+    "test:watch":"jest --watch",
+    "dev":"nodemon api/index.ts",
+    "start":"node api/index.ts"
+    
   },
   "keywords": [],
   "author": "Ricardo Collado Rothschild",
