--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "onlinestore_ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/dist/index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch":"jest --watch",
     "dev":"nodemon api/index.ts",
-    "start":"node api/index.ts"
+    "start":"node api/dist/index.js",
+    "build":"tsc"
     
   },
   "keywords": [],
