tryingt o fix serveless issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
     "rewrites":[
         {
-            "source":"/api/index.js",
+            "source":"/api/(.*)",
             "destination":"/api"
+        }
+    ],
+    "builds":[
+        {
+            "src": "./api/dist/index.js"
         }
     ]
 }
