--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
     ],
     "builds":[
         {
-            "src": "./api/dist/index.js"
+            "src": "./api/dist/index.js",
+            "use": "@vercel/node"
         }
     ]
 }
