configuration to packagejson

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "onlinestore_ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "api/dist/index.js",
+  "main": "./api/dist/index.js",
   "scripts": {
-    "dev":"nodemon api/index.ts",
+    "dev":"nodemon api/dist/index.ts",
     "start":"node api/dist/index.js"
     
     
