--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "onlinestore_ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "./api/dist/index.js",
+  "main": "api/index.js",
   "scripts": {
-    "dev":"nodemon api/dist/index.ts",
-    "start":"node api/dist/index.js"
+    "dev":"nodemon index.ts",
+    "start":"node api/index.js"
     
     
   },
