--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     ],
     "builds":[
         {
-            "src": "./api/dist/index.js",
+            "src": "./api/index.js",
             "use": "@vercel/node"
         }
     ]
