--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "source":"/api/(.*)",
             "destination":"/api"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/$1"
         }
     ],
     "builds":[
