--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "onlinestore_ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
     "dev":"nodemon index.ts",
     "start":"node api/index.js"
