--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,12 @@
 {
     "rewrites":[
         {
-            "source": "/",
-            "destination": "/api"
-          },
-        {
             "source":"/api/(.*)",
-            "destination":"/api"
+            "destination":"/api/$1"
         },
         {
             "source": "/(.*)",
-            "destination": "/$1"
+            "destination": ".index.js"
         }
     ],
     "builds":[
