--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
     "rewrites":[
         {
             "source":"/api/(.*)",
-            "destination":"/api/$1"
+            "destination":"/api"
         }
     ],
     "builds":[
         {
-            "src": "./api/index.js",
+            "src": "/api/index.js",
             "use": "@vercel/node"
         }
     ]
