--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev":"nodemon api/index.js",
+    "dev":"nodemon api/app.js",
     "start":"node api/app.js"
     
     
