--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "onlinestore_ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "dev":"nodemon api/app.js",
-    "start":"node api/app.js"
+    "dev":"nodemon api/index.js",
+    "start":"node api/index.js"
     
     
   },
