--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
     "rewrites":[
         {
             "source":"/api/(.*)",
-            "destination":"/api/$1"
+            "destination":"/api"
+        },{
+            "source": "/(.*)",
+            "destination": "/$1"
         }
     ],
     "builds":[
