--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "api/index.js",
   "scripts": {
-    "dev":"nodemon api/index.js",
-    "start":"node api/index.js"
-    
-    
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "Ricardo Collado Rothschild",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7",
     "typescript": "^5.3.3"
